92 - Reb - Fixes navbar on mobile

--- a/app/javascript/stylesheets/date_partial.scss
+++ b/app/javascript/stylesheets/date_partial.scss
@@ -5,7 +5,7 @@
 }
 
 .form-index-date-heading {
-  font-size: 24px;
+  font-size: 1.25rem;
   font-weight: 500;
   letter-spacing: 1.8px;
   color: black;
