--- a/app/javascript/stylesheets/forms.scss
+++ b/app/javascript/stylesheets/forms.scss
@@ -7,6 +7,10 @@
 }
 
 .form-tile {
+  padding: 0px 2rem;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
   height: 240px;
   background-color: $white;
   text-align: center;
@@ -46,15 +50,16 @@ a:hover.form-tile {
   color: $black;
 }
 
+
+
 .tile-desc {
-  font-size: 14px;
-  font-weight: 600;
+  font-size: 1.0rem;
+  font-weight: 400;
   letter-spacing: 1.05px;
 }
 
 .tile-title {
-  padding-top: 25px;
-  padding-bottom: 50px;
+  font-size: 1.25rem;
   letter-spacing: 1.8px;
 }
 
@@ -98,7 +103,7 @@ a:hover.form-tile {
 .form-index-header {
   margin-left: 35px;
   .form-chapter-name-heading {
-    font-size: 32px;
+    font-size: 1.5rem;
     font-weight: 600;
     letter-spacing: 2.39px;
     color: black;
@@ -106,7 +111,7 @@ a:hover.form-tile {
   }
   .form-title {
     .form-index-subhead {
-      font-size: 18px;
+      font-size: 1rem;
       font-weight: 500;
       letter-spacing: 1.35px;
       color: $green;
@@ -115,7 +120,10 @@ a:hover.form-tile {
   }
 }
 
+
+
 .form-label-description {
   color: $grey;
   font-size: 12px;
 }
+
